# env-cli

./: .gitignore  BUILD_FIX_SUMMARY.md  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  EC-05_IMPLEMENTATION_SUMMARY.md  LICENSE.md  Makefile  README.md  comprehensive-e2e-task-completion-report.md  deny.toml  e2e-test-report.md  final-e2e-test-report.md  nextest.toml  rust-toolchain.toml  todo.md
.github/: PULL_REQUEST_TEMPLATE.md  SECURITY.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: CI.yml  Docs.yml  Release.yml
docs/: ARCHITECTURE.md  CLI_SPEC.md  COMPLETION.md  DEVELOPMENT.md  E2E-CI-README.md  README.md
docs/tasks/: EC-01.md  EC-02.md  EC-03.md  EC-04.md  EC-05.md  EC-06.md  EC-07.md  EC-08.md  EC-09.md  EC-10.md  EC-11.md  planning.md
src/: error.rs  lib.rs  main.rs
src/cli/: completion.rs  mod.rs
src/commands/: completion.rs  enterprise.rs  generate.rs  init.rs  mod.rs  scan.rs  status.rs  switch.rs  sync.rs  validate.rs  workspace.rs
src/config/: mod.rs
src/enterprise/: audit.rs  auth.rs  collaboration.rs  compliance.rs  config.rs  encryption.rs  integrations.rs  mod.rs  rbac.rs
src/env/: mod.rs
src/plugins/: mod.rs
src/scan/: mod.rs
src/sync/: mod.rs
src/utils/: mod.rs
target_syntax/: .rustc_info.json
target_syntax/debug/.fingerprint/find-msvc-tools-0ca8b0eb2655f875/: lib-find_msvc_tools  lib-find_msvc_tools.json
target_syntax/debug/.fingerprint/futures-sink-f8abb34bdc776069/: lib-futures_sink  lib-futures_sink.json
target_syntax/debug/.fingerprint/icu_normalizer_data-9e4a89f91b2942dd/: output-build-script-build-script-build
target_syntax/debug/.fingerprint/icu_properties_data-d9f146557318e9d1/: output-build-script-build-script-build
target_syntax/debug/.fingerprint/parking_lot_core-62270fb0de8406d7/: output-build-script-build-script-build
target_syntax/debug/.fingerprint/proc-macro2-fda83eb4b4f5e517/: output-build-script-build-script-build
target_syntax/debug/.fingerprint/quote-3db939cd83aaa4bc/: output-build-script-build-script-build
target_syntax/debug/.fingerprint/serde-346e4bfc0ce6580a/: output-build-script-build-script-build
target_syntax/debug/.fingerprint/serde_core-37076afd67b72354/: output-build-script-build-script-build
target_syntax/debug/.fingerprint/stable_deref_trait-0d34467f4f9a34f7/: lib-stable_deref_trait  lib-stable_deref_trait.json
target_syntax/debug/.fingerprint/subtle-0549f0e8d2e07d7f/: lib-subtle  lib-subtle.json
target_syntax/debug/.fingerprint/typenum-1ee6afc9f8e45c6a/: output-build-script-build-script-build
target_syntax/debug/.fingerprint/windows-sys-e8eed15c0086be57/: lib-windows_sys  lib-windows_sys.json
target_syntax/debug/.fingerprint/windows_x86_64_msvc-a3759474c18e809f/: output-build-script-build-script-build
target_syntax/debug/.fingerprint/windows_x86_64_msvc-c6a189da8b4f43ed/: output-build-script-build-script-build
tests/: README.md  advanced_integration_tests.rs  edge_cases_tests.rs  integration_tests.rs  mod.rs
tests/common/: mod.rs
