[package]
name = "env-cli"
version = "0.1.0"
edition = "2024"
authors = ["Your Name <your.email@example.com>"]
description = "The missing CLI for environment variable management"
license = "MIT"
repository = "https://github.com/your-org/env-cli"
homepage = "https://github.com/your-org/env-cli"
keywords = ["environment", "env", "cli", "dotenv", "configuration"]
categories = ["command-line-utilities", "development-tools"]

[[bin]]
name = "env"
path = "src/main.rs"

[dependencies]
# CLI argument parsing
clap = { version = "4.5", features = ["derive"] }

# Error handling
anyhow = "1.0"
thiserror = "1.0"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.8"

# Utilities
regex = "1.11"
glob = "0.3"
dirs = "5.0"
rand = "0.8"
chrono = { version = "0.4", features = ["serde"] }

# Async runtime
tokio = { version = "1.42", features = ["full"] }

[dev-dependencies]
tempfile = "3.14"
assert_cmd = "2.0"
predicates = "3.1"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
panic = "abort"
strip = true
