[package]
name = "env-cli"
version = "0.1.0"
edition = "2021"
authors = ["Your Name <your.email@example.com>"]
description = "The missing CLI for environment variable management"
license = "MIT"
repository = "https://github.com/your-org/env-cli"
homepage = "https://github.com/your-org/env-cli"
keywords = ["environment", "env", "cli", "dotenv", "configuration"]
categories = ["command-line-utilities", "development-tools"]

[[bin]]
name = "env"
path = "src/main.rs"

[dependencies]
# CLI argument parsing
clap = { version = "4.5", features = ["derive"] }

# Error handling
anyhow = "1.0"
thiserror = "1.0"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"
toml = "0.8"

# Utilities
regex = "1.11"
glob = "0.3"
dirs = "5.0"
rand = "0.8"
chrono = { version = "0.4", features = ["serde"] }

# Parallel processing for EC-03
rayon = "1.10"

# File system operations
walkdir = "2.5"
ignore = "0.4"

# Advanced string matching
similar = "2.6"
diff = "0.1"

# Async runtime
tokio = { version = "1.42", features = ["full"] }

# Enterprise and security dependencies for EC-05
uuid = { version = "1.11", features = ["v4", "serde"] }
argon2 = "0.5"
ring = "0.17"
base64 = "0.22"
hex = "0.4"
jsonwebtoken = "9.3"
bcrypt = "0.15"
sqlx = { version = "0.8", features = ["runtime-tokio-rustls", "uuid", "chrono", "postgres", "migrate"] }
chrono-tz = "0.10"
sha2 = "0.10"
hmac = "0.12"
aes-gcm = "0.10"
rand_chacha = "0.3"
zeroize = { version = "1.8", features = ["zeroize_derive"] }
secrecy = "0.10"
url = "2.5"

# Enterprise integrations
reqwest = { version = "0.12", features = ["json"] }
ldap3 = "0.12"
openssl = "0.10"
xml-rs = "0.8"
quick-xml = { version = "0.37", features = ["serialize"] }

# Enterprise validation and compliance
validator = { version = "0.20", features = ["derive"] }
once_cell = "1.20"
dashmap = "6.1"
lru = "0.12"
parking_lot = "0.12"

# Async traits for enterprise features
async-trait = "0.1"

[dev-dependencies]
tempfile = "3.14"
assert_cmd = "2.0"
predicates = "3.1"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
panic = "abort"
strip = true
