[package]
name = "env-cli"
version = "0.1.0"
edition = "2021"
rust-version = "1.70.0"
authors = ["env-cli contributors"]
description = "The missing CLI for environment variable management - A powerful tool for managing environment variables across development, staging, and production"
readme = "README.md"
license = "MIT"
repository = "https://github.com/env-cli/env-cli"
homepage = "https://github.com/env-cli/env-cli"
documentation = "https://docs.rs/env-cli"
keywords = ["environment", "env", "cli", "dotenv", "configuration"]
categories = ["command-line-utilities", "development-tools"]
exclude = [
    ".github/",
    "docs/tasks/",
    "target/",
    "*.log",
    ".env*",
]

[[bin]]
name = "env"
path = "src/main.rs"
test = false

[lib]
name = "env_cli"
path = "src/lib.rs"

[dependencies]
# CLI argument parsing
clap = { version = "4.5", features = ["derive"] }

# Error handling
anyhow = "1.0"
thiserror = "1.0"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"
toml = "0.8"

# Utilities
regex = "1.11"
glob = "0.3"
dirs = "5.0"
rand = "0.8"
chrono = { version = "0.4", features = ["serde"] }

# Parallel processing for EC-03
rayon = "1.10"

# File system operations
walkdir = "2.5"
ignore = "0.4"

# Advanced string matching
similar = "2.6"
diff = "0.1"

# Async runtime
tokio = { version = "1.42", features = ["full"] }

# Logging and tracing
tracing = "0.1"

[dev-dependencies]
tempfile = "3.14"
assert_cmd = "2.0"
predicates = "3.1"
serde_json = "1.0"
serde_yaml = "0.9"
serial_test = "3.1"
pretty_assertions = "1.4"
test-case = "3.3"
proptest = "1.5"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
panic = "abort"
strip = true
